[project]
name = "my-project"
version = "1.2.3"
readme = "README.md"
requires-python = ">=3.8"
description = "Long description"
dependencies = [
    "pytest"
]

[tool.pip-tools]
annotate = false
emit-index-url = false
generate-hashes = true
header = false
output-file = "requirements.txt"
src-files = [
    "pyproject.toml",
    "requirements.dev.in",
]
